--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,11 @@
     "iron-ajax": "PolymerElements/iron-ajax#^2.0.6",
     "paper-button": "Polymer/Elements/paper-button#^2.0.0",
     "paper-input": "PolymerElements/paper-input#^2.0.3",
-    "paper-dialog": "PolymerElements/paper-dialog#^2.0.0"
+    "paper-dialog": "PolymerElements/paper-dialog#^2.0.0",
+    "iron-icon": "PolymerElements/iron-icon#^2.0.1",
+    "iron-iconset-svg": "PolymerElements/iron-iconset-svg#^2.1.0",
+    "iron-icons": "PolymerElements/iron-icons#^2.0.1",
+    "paper-icon-button": "PolymerElements/paper-icon-button#^2.0.1"
   },
   "devDependencies": {
     "web-component-tester": "^6.0.0-prerelease.5",
